k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trendist-frontend-service
  labels:
    app: trendist-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: trendist-frontend
